# VoxelVolumeRayCaster

./: .clang-format  .gitmodules  .~lock.Report.odt#  CMakeLists.txt  Dockerfile  Makefile  README.md  Report.odt  compile_commands.json  main.cpp  out_image.tif
headers/: Projection.h  Source.h  SphereVolume.h  VoxelVolume.h
src/: Projection.cpp  SphereVolume.cpp
